# test.helper.vbot3

./: .gitignore  MANIFEST.in  README.md  history.txt  makefile  requirements.txt  setup.cfg
.github/workflows/: pep257.yml  py3.yml
tester_vbot3/: __init__.py
