[metadata]
name = test_helper_vbot3
version = 1.5
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Tester for Vbot3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/test.helper.vbot3
project_urls =
    Bug Tracker = https://github.com/vb64/test.helper.vbot3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = tester_vbot3
python_requires = >=3.7
install_requires =
    telemulator3==1.4
    tester_flask==1.2
    test-helper-gae3==1.2
